--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,15 @@
-
+/*  CMSC355, Sect 001
+ *  Group Project - Sprint 1
+ *  Sawiya Aidarus, Dustin Cam, Colin Drake, Jeriel Pungtilan, James West
+ *  Basic Style Sheet for formatting the index.html page
+ *  Contains a handful of basic styles for the various text sizes and page elements
+ */
+                                                        */
 body {
     font-family: Arial, sans-serif;
 }
 
+/* Container for the chat interface */
 .chat-container {
     background-color: #f7fafc;
     width: 96%;
@@ -12,15 +19,18 @@ body {
     overflow-y: auto;
 }
 
+/* Hidden items display nothing */
 .hidden {
     display: none;
 }
 
+/* Title layout */
 .title {
     text-align: center;
     font-weight: bold;
 }
 
+/* Stores content (messages) based on the number of characters */
 .flex-container {
     display: flex;
     justify-content: center;
@@ -28,6 +38,7 @@ body {
     gap: 1rem;
 }
 
+/* Input field for composing messages */
 .input {
     background-color: #fff;
     border: 1px solid #e2e8f0;
@@ -35,7 +46,7 @@ body {
     padding: 0.5rem;
     flex: 1;
 }
-
+/* Simple button layout*/
 .button {
     background-color: #4f46e5;
     color: #fff;
@@ -53,6 +64,7 @@ body {
     padding: 0;
 }
 
+/* Header for messages */
 .message-header {
     display: flex;
     justify-content: space-between;
@@ -60,6 +72,7 @@ body {
     margin-bottom: 5px;
 }
 
+/* Font size/color for message bubbles */
 .sender {
     font-weight: bold;
 }
@@ -103,6 +116,7 @@ body {
     align-items: center;
 }
 
+/* Specific send button layout */
 .send-button {
     background-color: #4f46e5;
     color: #fff;
